--- a/Assets/WebGLTemplates/ChikasYG1.5/TemplateData/style.css
+++ b/Assets/WebGLTemplates/ChikasYG1.5/TemplateData/style.css
@@ -18,10 +18,14 @@ body {
     width: 100%;
     height: 100%;
     position: fixed;
+    #if SET_1_TO_DISABLE_SHADOWS
+    /* Тени отключены */
+    #else
     /* Добавляем тени по бокам */
     -webkit-box-shadow: 0px 5px 10px 10px rgba(34, 60, 80, 0.2);
     -moz-box-shadow: 0px 5px 10px 10px rgba(34, 60, 80, 0.2);
     box-shadow: 0px 5px 10px 10px rgba(34, 60, 80, 0.2);
+    #endif
 }
 #unity-canvas {
     width: 100%;
